--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -2334,5 +2334,13 @@ config MFD_RSMU_SPI
 	  Additional drivers must be enabled in order to use the functionality
 	  of the device.
 
+config MFD_MSM_PROC_COMM
+	tristate "Qcom interprocessor communication"
+	depends on OF
+	select MFD_CORE
+	help
+	  Support for the Qcom interprocessor communication found in MSM7200 QSD8250 and MSM7x30
+
+
 endmenu
 endif
