--- a/drivers/power/reset/Kconfig
+++ b/drivers/power/reset/Kconfig
@@ -123,6 +123,12 @@ config POWER_RESET_MSM
 	help
 	  Power off and restart support for Qualcomm boards.
 
+config POWER_RESET_MSM_PROC_COMM
+	bool "Qualcomm MSM power-off driver for PROC_COMM"
+	depends on ARCH_QCOM && MFD_MSM_PROC_COMM
+	help
+	  Power off and restart support for Qualcomm boards that use the PROC_COMM interface.
+
 config POWER_RESET_QCOM_PON
 	tristate "Qualcomm power-on driver"
 	depends on ARCH_QCOM
